2005-09-05  Osmo Salomaa  <otsaloma@cc.hut.fi>

	START OF PARTIAL CODE REWRITE. BROKEN!

	* lib/gaupol/gtk: Renamed from lib/gaupol/gui.

	* lib/gaupol/base: Renamed from lib/gaupol/lib.

2005-09-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gui/delegates/guibuilder.py (_build_framerate_combo_box):
	  Shifted framerate combo to the left of the spell-check item.

	* data/glade/insertsub-dialog.glade:
	  Removed separator.

	* data/glade/spellcheck-window.glade:
	  Added "Join Back" and "Join Forward" buttons. Made language label
	  wider.

2005-09-02  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* test/pyenchant:
	  Print also the names of the dictionary providers.

	* gaupol:
	  setup.py:
	  trantool:
	  Minor adjustments.

	* README:
	  Added info on new optional dependencies.

2005-09-01  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* lib/gaupol/gui/dialogs/error.py (SpellCheckErrorDialog):
	  New class for spell-check errors.
	
	* lib/gaupol/gui/spellcheck.py:
	  New module for spell-check window. Buggy and incomplete!
	
	* lib/gaupol/gui/delegates/spellchecker.py:
	  Major rewrite.

	* lib/gaupol/gui/delegates/durmanager.py (DURAction.__init__):
	  Fixed typo.
	
	* lib/gaupol/gui/delegates/durmanager.py (DURManager.register_action):
	  lib/gaupol/gui/application.py:
	  New method for actions already done. Added to delegation dictionary.
	
	* lib/gaupol/gui/util/config.py (Config.write_to_file):
	  Fixed a bug with profile directory creation error handling.
	
	* lib/gaupol/lib/util/langlib.py (get_descriptive_name):
	  New method for getting descriptive name.
	
	* data/glade/spellcheck-window.glade:
	  Minor adjustments.

	* data/glade/edit-dialog.glade:
	  Removed in favor of manual construction.

2005-08-30  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol (prepare_gettext):
	  Added dgettext and removed broken ngettext for now.

	* gui/dialogs/language.py:
	  language-dialog.glade:
	  Reformatted language lists.

	* lib/util/langlib.py: